--- a/css/custom.css
+++ b/css/custom.css
@@ -25,7 +25,7 @@ a{
 .jumbotron{
     padding-top: 70px;
     background-image: url("../images/hpattern1.png");
-    background-color: #292929;
+    background-color: #c7254e;
     min-height: 215px;
     /*border-bottom: 1px dashed rgba(250, 250, 250, 0.5);*/
     margin-bottom: 0;
