--- a/css/custom.css
+++ b/css/custom.css
@@ -22,8 +22,19 @@ a{
     border-bottom: none;
     box-shadow: 1px 1px 10px 1px #000000;
 }
+.dropdown-menu{
+    width: 700px;
+    text-align: right;
+}
+.dropdown-menu li{
+    float: right;
+    width: 200px;
+    border-left: dashed 1px #000;
+}
+
 .jumbotron{
     padding-top: 70px;
+    padding-bottom: 0;
     background-image: url("../images/hpattern1.png");
     background-color: #c7254e;
     min-height: 215px;
@@ -43,7 +54,7 @@ a{
 
 .view {
     min-width: 100%;
-    height: 200px;
+    height: 250px;
     margin-bottom: 20px;
     float: left;
     border: 10px solid #fff;
@@ -58,7 +69,7 @@ a{
 }
 .view .mask,.view .content {
     width: 100%;
-    height: 200px;
+    height: 250px;
     position: absolute;
     overflow: hidden;
     top: 0;
