--- a/css/custom.css
+++ b/css/custom.css
@@ -53,7 +53,7 @@ a{
 }
 
 .view {
-    min-width: 100%;
+    width: 100%;
     height: 250px;
     margin-bottom: 20px;
     float: left;
@@ -66,6 +66,10 @@ a{
     box-shadow: 1px 1px 2px #e6e6e6;
     cursor: default;
     background: #fff no-repeat center center;
+}
+.view img{
+    width: 100%;
+    height: 100%;
 }
 .view .mask,.view .content {
     width: 100%;
@@ -609,4 +613,8 @@ footer li a:hover i{
     margin: 0 auto;
     text-align: center;
     padding: 0 0 20px;
+}
+
+.form-2{
+    display: block !important;
 }
